# media-player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/tim/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  SuperPlayer.cpp  SuperPlayer.h  VideoChannel.cpp  VideoChannel.h  myutil.h  native-lib.cpp  safe_queue.h
app/src/main/java/cn/tim/player/: MainActivity.java  SuperPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/tim/player/: ExampleUnitTest.java
